--- a/main.css
+++ b/main.css
@@ -79,12 +79,13 @@
  width: auto;
  height: auto;
 }
-body {
+.body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   background-size: cover;
 }
+/* Below is the login/signup form thing */
 .login-box {
   width: 280px;
   position: absolute;
@@ -132,4 +133,12 @@ body {
   font-size: 18px;
   cursor: pointer;
   margin: 12px 0;
+}
+/* Setting Images, Width, Deminsions, etc... */
+.pictures {
+  float: left;
+  width: 33.33%;
+  padding: 20px;
+  height: 120px;
+  margin: 50px;
 }
